--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.0.0",
+    "bootstrap-social": "^5.1.1",
+    "font-awesome": "^4.7.0",
+    "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-popper": "^0.9.2",
     "react-scripts": "3.4.1",
-    "reactstrap": "^5.0.0",
-    "prettier": "^2.0.5"
+    "reactstrap": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
