--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "reactstrap": "^5.0.0",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-thunk": "latest",
+    "redux-logger": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
